# LemonTea

./: .gitignore  CMakeLists.txt  README.md
config/: server.example.json
plugins/: server_echo.manifest.json  server_echo_plugin.py
src/: main.cpp
